--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 Hello World
+[Prediction of post-hepatectomy liver failure in patients with hepatocellular carcinoma based on radiomics using Gd-EOB-DTPA-enhanced MRI: the liver failure model](https://scholar.google.com.hk/citations?view_op=view_citation&hl=zh-CN&user=LNSE_VcAAAAJ&citation_for_view=LNSE_VcAAAAJ:kNdYIx-mwKoC)
+
+https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2021.605296/pdf?isPublishedV2=false
+
+https://scholar.googleusercontent.com/scholar.bib?q=info:MCSkpg9d6IsJ:scholar.google.com/&output=citation&scisdr=ClGrD2IxEPSNr0zrIYc:AFWwaeYAAAAAZurtOYfVl3wC78OpJ0QNSawCjuk&scisig=AFWwaeYAAAAAZurtOa-0e4H4Gilyy-8cDVROEMU&scisf=4&ct=citation&cd=-1&hl=zh-CN
